welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if (isMorning==true && isMom==true && isAsleep=false) 
	{ return true;
	}
	if(isMorning==true && isMum=true && isAsleep=false) 
	{
		return false
} 
}
